--- a/package.json
+++ b/package.json
@@ -1,30 +1,9 @@
 {
-<<<<<<< HEAD
   "name": "dressingmobile",
   "license": "0BSD",
   "version": "1.0.0",
   "main": "index.js",
-=======
-  "name": "dressing-app",
-  "version": "0.1.0",
   "private": true,
-  "homepage": "/dress-app/build",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mysql2": "^3.12.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "uuid": "^11.1.0",
-    "web-vitals": "^2.1.4"
-  },
->>>>>>> affac6e83790bc4349f07aa10cb8bdf990132248
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -34,9 +13,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^7.7.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
+    "@react-navigation/stack": "^7.3.2",
     "date-fns": "^4.1.0",
     "expo": "~53.0.9",
     "expo-file-system": "^18.1.10",
@@ -50,26 +31,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0"
   },
-<<<<<<< HEAD
   "devDependencies": {
     "@babel/core": "^7.20.0"
-  },
-  "private": true
-=======
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
   }
->>>>>>> affac6e83790bc4349f07aa10cb8bdf990132248
 }
